[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Draw.gd" type="Script" id=2]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSplitContainer" type="HSplitContainer" parent="GUI"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="GUI/HSplitContainer"]
margin_right = 329.0
margin_bottom = 600.0

[node name="Label" type="Label" parent="GUI/HSplitContainer/VBoxContainer"]
margin_right = 329.0
margin_bottom = 14.0
text = "Dataset"
align = 1

[node name="DatasetLabel" type="Label" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 18.0
margin_right = 329.0
margin_bottom = 32.0
text = "Click the button below to download mnist dataset."

[node name="DownloadButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 36.0
margin_right = 329.0
margin_bottom = 56.0
text = "Download Dataset"

[node name="OpenDataButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 329.0
margin_bottom = 80.0
text = "Open User Data Folder"

[node name="HSeparator" type="HSeparator" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 329.0
margin_bottom = 88.0

[node name="Label2" type="Label" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 92.0
margin_right = 329.0
margin_bottom = 106.0
text = "Model"
align = 1

[node name="ModelLabel" type="Label" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 329.0
margin_bottom = 124.0
text = "Model will be saved to user://network.json"

[node name="LoadModelButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 128.0
margin_right = 329.0
margin_bottom = 148.0
disabled = true
text = "Load Model"

[node name="HSeparator6" type="HSeparator" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 329.0
margin_bottom = 156.0

[node name="PreviewLabel" type="Label" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 329.0
margin_bottom = 174.0
text = "Preview"
align = 1

[node name="ShowTrainButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 178.0
margin_right = 329.0
margin_bottom = 198.0
text = "Show Training Image"

[node name="ShowTestButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 202.0
margin_right = 329.0
margin_bottom = 222.0
text = "Show Testing Image"

[node name="ClearButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 226.0
margin_right = 329.0
margin_bottom = 246.0
text = "Clear"

[node name="HSeparator2" type="HSeparator" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 250.0
margin_right = 329.0
margin_bottom = 254.0

[node name="TrainLabel" type="Label" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 258.0
margin_right = 329.0
margin_bottom = 272.0
text = "Train"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 276.0
margin_right = 329.0
margin_bottom = 300.0

[node name="Label" type="Label" parent="GUI/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 93.0
margin_bottom = 19.0
text = "Iteration: from"

[node name="SpinBoxFrom" type="SpinBox" parent="GUI/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 97.0
margin_right = 171.0
margin_bottom = 24.0
max_value = 60000.0

[node name="Label2" type="Label" parent="GUI/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 175.0
margin_top = 5.0
margin_right = 192.0
margin_bottom = 19.0
text = " to"

[node name="SpinBoxTo" type="SpinBox" parent="GUI/HSplitContainer/VBoxContainer/HBoxContainer"]
margin_left = 196.0
margin_right = 270.0
margin_bottom = 24.0
max_value = 60000.0
value = 10000.0

[node name="HBoxContainer2" type="HBoxContainer" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 304.0
margin_right = 329.0
margin_bottom = 328.0

[node name="Label3" type="Label" parent="GUI/HSplitContainer/VBoxContainer/HBoxContainer2"]
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Batch size: "

[node name="SpinBoxBatchSize" type="SpinBox" parent="GUI/HSplitContainer/VBoxContainer/HBoxContainer2"]
margin_left = 78.0
margin_right = 152.0
margin_bottom = 24.0
max_value = 60000.0
value = 100.0

[node name="Label4" type="Label" parent="GUI/HSplitContainer/VBoxContainer/HBoxContainer2"]
margin_left = 156.0
margin_top = 5.0
margin_right = 251.0
margin_bottom = 19.0
text = " Learning rate: "

[node name="SpinBoxLearningRate" type="SpinBox" parent="GUI/HSplitContainer/VBoxContainer/HBoxContainer2"]
margin_left = 255.0
margin_right = 329.0
margin_bottom = 24.0
step = 0.001
value = 0.1

[node name="TrainButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 332.0
margin_right = 329.0
margin_bottom = 352.0
text = "Train"

[node name="AccuracyButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 356.0
margin_right = 329.0
margin_bottom = 376.0
text = "Accuracy"

[node name="SaveButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 380.0
margin_right = 329.0
margin_bottom = 400.0
text = "Save"

[node name="HSeparator3" type="HSeparator" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 404.0
margin_right = 329.0
margin_bottom = 408.0

[node name="PredictLabel" type="Label" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 412.0
margin_right = 329.0
margin_bottom = 426.0
text = "Predict"
align = 1

[node name="DrawButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 430.0
margin_right = 329.0
margin_bottom = 450.0
text = "Draw"

[node name="PredictButton" type="Button" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 454.0
margin_right = 329.0
margin_bottom = 474.0
text = "Predict"

[node name="HSeparator4" type="HSeparator" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 478.0
margin_right = 329.0
margin_bottom = 482.0

[node name="ResultLabel" type="Label" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 486.0
margin_right = 329.0
margin_bottom = 500.0
text = "Result"
align = 1

[node name="GridContainer" type="GridContainer" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 504.0
margin_right = 329.0
margin_bottom = 536.0
columns = 2

[node name="Label" type="Label" parent="GUI/HSplitContainer/VBoxContainer/GridContainer"]
margin_right = 75.0
margin_bottom = 14.0
text = "Data Label: "

[node name="DataLabel" type="Label" parent="GUI/HSplitContainer/VBoxContainer/GridContainer"]
margin_left = 79.0
margin_right = 79.0
margin_bottom = 14.0

[node name="Label3" type="Label" parent="GUI/HSplitContainer/VBoxContainer/GridContainer"]
margin_top = 18.0
margin_right = 75.0
margin_bottom = 32.0
text = "Prediction: "

[node name="PredictionLabel" type="Label" parent="GUI/HSplitContainer/VBoxContainer/GridContainer"]
margin_left = 79.0
margin_top = 18.0
margin_right = 79.0
margin_bottom = 32.0

[node name="HSeparator5" type="HSeparator" parent="GUI/HSplitContainer/VBoxContainer"]
margin_top = 540.0
margin_right = 329.0
margin_bottom = 544.0

[node name="CenterContainer" type="CenterContainer" parent="GUI/HSplitContainer"]
margin_left = 341.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="ViewportContainer" type="ViewportContainer" parent="GUI/HSplitContainer/CenterContainer"]
margin_left = 277.0
margin_top = 236.0
margin_right = 405.0
margin_bottom = 364.0
rect_min_size = Vector2( 128, 128 )
stretch = true

[node name="Viewport" type="Viewport" parent="GUI/HSplitContainer/CenterContainer/ViewportContainer"]
size = Vector2( 28, 28 )
handle_input_locally = false
usage = 0
render_target_update_mode = 3

[node name="TextureRect" type="TextureRect" parent="GUI/HSplitContainer/CenterContainer/ViewportContainer/Viewport"]
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 28, 28 )
expand = true

[node name="Draw" type="Control" parent="GUI/HSplitContainer/CenterContainer/ViewportContainer/Viewport"]
margin_right = 28.0
margin_bottom = 28.0
script = ExtResource( 2 )

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/DownloadButton" to="." method="_on_DownloadButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/OpenDataButton" to="." method="_on_OpenDataButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/LoadModelButton" to="." method="_on_LoadModelButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/ShowTrainButton" to="." method="_on_ShowTrainButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/ShowTestButton" to="." method="_on_ShowTestButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/ClearButton" to="." method="_on_ClearButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/TrainButton" to="." method="_on_TrainButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/AccuracyButton" to="." method="_on_AccuracyButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/DrawButton" to="." method="_on_DrawButton_pressed"]
[connection signal="pressed" from="GUI/HSplitContainer/VBoxContainer/PredictButton" to="." method="_on_PredictButton_pressed"]
